Set the spacing variables to pixel values and extend the usage of the rem @mixin

--- a/Ressources/Private/Sass/_settings/_variables.scss
+++ b/Ressources/Private/Sass/_settings/_variables.scss
@@ -72,7 +72,7 @@ $baseFontWeight:        $regular !default;
 $baseTextColor:         #3C474B !default;
 
 // =============================== Spacings ===============================
-$basicSpacing:          $baseLineHeight / $baseFontSize !default;
+$basicSpacing:          $baseLineHeight !default;
 $halfSpacing:           $basicSpacing / 2 !default;
 
 
