--- a/Ressources/Private/Sass/base/_forms.scss
+++ b/Ressources/Private/Sass/base/_forms.scss
@@ -28,7 +28,7 @@ input[type="week"] {
   display: inline-block;
   height: $baseLineHeight +px;
   padding: 0 0.4em;
-  @include rem($value: $halfSpacing, $property: margin-bottom);
+  @include rem($property: margin-bottom, $value: $halfSpacing);
 
   background: $contentBackground;
   border: 1px solid $basicBorderColor;
