--- a/Ressources/Private/Sass/base/_typography.scss
+++ b/Ressources/Private/Sass/base/_typography.scss
@@ -156,23 +156,23 @@ ul, dl, menu { margin-top: 0; }
 /* Basic spacing */
 %margin-top,
 .basic_spacing-top {
-  @include rem($value: $basicSpacing, $property: margin-top);
+  @include rem($property: margin-top, $value: $basicSpacing);
 }
 /* Half spacing */
 %half-margin-top,
 .half-basic_spacing-top {
-  @include rem($value: $halfSpacing, $property: margin-top);
+  @include rem($property: margin-top, $value: $halfSpacing);
 }
 
 /* ====================== Bottom margins ======================= */
 /* Basic spacing */
 %margin-bottom,
 .basic_spacing-bottom {
-  @include rem($value: $basicSpacing, $property: margin-bottom);
+  @include rem($property: margin-bottom, $value: $basicSpacing);
 }
 
 /* Half spacing */
 %half-margin-bottom,
 .basic_spacing-bottom {
-  @include rem($value: $halfSpacing, $property: margin-bottom);
+  @include rem($property: margin-bottom, $value: $halfSpacing);
 }
