Remove unnecessary color declarations inside _buttons.scss

--- a/Ressources/Private/Sass/objects/_buttons.scss
+++ b/Ressources/Private/Sass/objects/_buttons.scss
@@ -19,10 +19,9 @@ $ Button Object
 .btn {
   @extend %btn;
   display: inline-block;
-  color: $buttonColor;
+  &,
   &:hover {
     text-decoration: none;
-    color: $buttonColor;
   }
   @if $oldIE {
     *display: inline;
