--- a/Ressources/Private/Sass/base/_forms.scss
+++ b/Ressources/Private/Sass/base/_forms.scss
@@ -88,7 +88,7 @@ input[type="submit"] {
    */
   font-weight: normal;
   line-height: 1;
-  color: color-adjust($buttonColor, 100%);
+  color: $buttonColor;
 }
 
 
