Add a _brand.scss file for all brand related styles

--- a/Ressources/Private/Sass/main.scss
+++ b/Ressources/Private/Sass/main.scss
@@ -26,6 +26,7 @@ $package_name: t3b_frontend;
 @import "generic/_normalize";         // Normalize elements accross all browsers
 @import "generic/_grid";              // Grid
 @import "generic/_t3-general";        // TYPO3 element styling
+@import "generic/_brand";             // Brand related styling
 
 
 // =============================================================================
