--- a/Ressources/Private/Sass/base/_base.scss
+++ b/Ressources/Private/Sass/base/_base.scss
@@ -26,17 +26,6 @@ body {
   width: $layoutWidth;
   position: relative;
 }
-.site-header {
-
-  @extend %non-print; // Will be hidden on print
-  .wrapper { }
-}
-.site-content {
-
-  .wrapper { }
-}
-.site-footer {
-
-  @extend %non-print; // Will be hidden on print
-  .wrapper { }
-}
+.site-header { }
+.site-content { }
+.site-footer { }
