Revert "Remove $oldIE support for the _navigations.scss object"
This reverts commit a484e537a4087db9165d011fa5bbe48ceaf89b74.

--- a/Ressources/Private/Sass/objects/_navigations.scss
+++ b/Ressources/Private/Sass/objects/_navigations.scss
@@ -41,7 +41,13 @@ $ Navigation Object
 .nav--fit {
   display: table;
   width: 100%;
-  > li {
-    display: table-cell;
+
+  @if $oldIE == true {
+    li { display: table-cell; }
+    li li { display: inline-block; }
+  } @else {
+    > li {
+      display: table-cell;
+    }
   }
 }
