Shortened a section comment inside _variables.scss

--- a/Ressources/Private/Sass/_settings/_variables.scss
+++ b/Ressources/Private/Sass/_settings/_variables.scss
@@ -102,7 +102,7 @@ $brandBorderRadius:     1px !default;
 
 
 // =============================================================================
-// Design Colors amd other style related variables
+// Design related variables
 // =============================================================================
 // ================================= Links ================================
 $linkColor:             $brandColor !default;
