Added an explanational code comment for the image-replacement @mixin inside _brand.scss

--- a/Ressources/Private/Sass/generic/_brand.scss
+++ b/Ressources/Private/Sass/generic/_brand.scss
@@ -21,6 +21,8 @@ $ Brand styles & helper classes
 .brand-logo {
   // If you want to use the image-replacement technique,
   // replace 'false' with the image-name of your brand logo
+  // e.g.:
+  // @include image-replacement('brand_logo.gif', $display-mode: inline-block);
   @include image-replacement(false, $display-mode: inline-block);
 
   .site-header & { }
