--- a/Ressources/Private/Sass/_settings/_variables.scss
+++ b/Ressources/Private/Sass/_settings/_variables.scss
@@ -96,8 +96,14 @@ $h6-size:               14 !default;
 // =============================================================================
 // Brand related variables
 // =============================================================================
+// Your main brand color
 $brandColor:            #0097d7 !default;
+
+// Your main brand Font-Family
 $brandFontFamily:       $sansFontFamily !default;
+
+// If your layout makes use of rounded corners, you can specify an Border-Radius here to
+// have a consistent setting.
 $brandBorderRadius:     1px !default;
 
 
