Add a license notice on all objects from inuit.css

--- a/Ressources/Private/Sass/objects/_buttons.scss
+++ b/Ressources/Private/Sass/objects/_buttons.scss
@@ -1,9 +1,11 @@
 /*!
- * Button abstraction
+ * Basic button structural styling from
+ * inuit.css <https://github.com/csswizardry/inuit.css/>
  *
  * @package #{$package_name()}
  * @path objects/_buttons.scss
  * @author Tyll Weiß <t.weiss@exinit.de>
+ * @license Apache License, Version 2.0.
  * @link http://csswizardry.com/2011/09/the-nav-abstraction/
  */
 
