--- a/Ressources/Private/Sass/objects/_navigations.scss
+++ b/Ressources/Private/Sass/objects/_navigations.scss
@@ -1,9 +1,11 @@
 /*!
- * Navigation abstraction
+ * A modified version of the navigation object from
+ * inuit.css <https://github.com/csswizardry/inuit.css/>
  *
  * @package #{$package_name()}
  * @path objects/_navigations.scss
  * @author Tyll Weiß <t.weiss@exinit.de>
+ * @license Apache License, Version 2.0.
  * @link http://csswizardry.com/2011/09/the-nav-abstraction/
  */
 
