--- a/Ressources/Private/Sass/main.scss
+++ b/Ressources/Private/Sass/main.scss
@@ -25,6 +25,7 @@ $package_name: t3b_frontend;
 @import "generic/_head";              // Declarations wich should be put at the top
 @import "generic/_normalize";         // Normalize elements accross all browsers
 @import "generic/_grid";              // Grid
+@import "generic/_widths";            // Widths in a human readable format
 @import "generic/_t3-general";        // TYPO3 element styling
 @import "generic/_brand";             // Brand related styling
 
