--- a/Ressources/Private/Sass/objects/_grid.scss
+++ b/Ressources/Private/Sass/objects/_grid.scss
@@ -26,7 +26,6 @@ $ Grid Classes
     <div class="gi one-third"> </div>
   </div>
 ================================================================================ */
-/* ========================= Grid helper ========================= */
 .gw,
 .grid-wrapper {
   @extend .cf;
@@ -40,7 +39,8 @@ $ Grid Classes
   padding-left: ($columnGutter / 2) +px;
   padding-right: ($columnGutter / 2) +px;
 }
-// Layout modes and helper classes
+
+/* =================== Grid item abstractions ==================== */
 .grid-item--centered {
   margin-left: auto;
   margin-right: auto;
