Created an check to see if the $headingsFontFamily is different from $baseFontFamily

--- a/Ressources/Private/Sass/_settings/_variables.scss
+++ b/Ressources/Private/Sass/_settings/_variables.scss
@@ -80,7 +80,7 @@ $halfSpacing:           $basicSpacing / 2 !default;
 // Headings
 // =============================================================================
 // =============================== Headings ===============================
-$headingsFontFamily:    inherit !default; // empty to use $baseFontFamily
+$headingsFontFamily:    false !default;
 $headingsFontWeight:    $bold !default;
 $headingsColor:         #000 !default;
 
