--- a/Ressources/Private/Sass/base/_headings.scss
+++ b/Ressources/Private/Sass/base/_headings.scss
@@ -12,7 +12,7 @@ $ Headings
 ================================================================================ */
 h1, h2, h3,
 h4, h5, h6 {
-  font-family: $headingsFontFamily;
+  @if $headingsFontFamily { font-family: $headingsFontFamily; }
   font-weight: $headingsFontWeight;
   color: $headingsColor;
   /**
