--- a/Ressources/Private/Sass/_settings/_variables.scss
+++ b/Ressources/Private/Sass/_settings/_variables.scss
@@ -43,7 +43,7 @@ $layoutWidth:           960px !default;
 $centeredLayout:        true !default;
 
 // Inner spacing for all grid-items
-$columnGutter:          20 !default;
+$columnGutter:          20px !default;
 
 // The background wich will be set on the <body> element, you can also pass in
 // other arguments e.g.:
