Fix the header comment for _base.scss

--- a/Ressources/Private/Sass/base/_base.scss
+++ b/Ressources/Private/Sass/base/_base.scss
@@ -1,5 +1,5 @@
 /*!
- * High-level wrapper elements, logos and CI related stuff
+ * High-level wrapper elements
  *
  * @package #{$package_name()}
  * @path base/_base.scss
