scope the rem mixin inside the font-size mixin to the font-size property

--- a/Ressources/Private/Sass/_settings/_mixins.scss
+++ b/Ressources/Private/Sass/_settings/_mixins.scss
@@ -69,7 +69,7 @@
 // Thanks to Harry Roberts (@csswizardry)
 // =============================================================================
 @mixin font-size($size, $append-vrythm: false) {
-  @include rem($value: $size);
+  @include rem(font-size, $size);
   @if $append-vrythm {
     line-height: ceil($size / $baseLineHeight) * ($baseLineHeight / $size);
   }
