Change the base-author email

--- a/Ressources/Private/Sass/_settings/_media-queries.scss
+++ b/Ressources/Private/Sass/_settings/_media-queries.scss
@@ -3,7 +3,7 @@
 //
 // @package #{$package_name()}
 // @path settings/_media-queries.scss
-// @author Rafal Bromirski <http://paranoida.com/>, Tyll Weiß <t.weiss@exinit.de>
+// @author Rafal Bromirski <http://paranoida.com/>, Tyll Weiß <inkdpixels@gmail.com>
 // @license MIT <http://opensource.org/licenses/MIT>
 // @link https://github.com/paranoida/sass-mediaqueries
 // @version 2.1 (developed on 16/02/2013)
