--- a/Ressources/Private/Sass/base/_media.scss
+++ b/Ressources/Private/Sass/base/_media.scss
@@ -4,7 +4,7 @@
  *
  * @package #{$package_name()}
  * @path base/_media.scss
- * @author Tyll Weiß <t.weiss@exinit.de>
+ * @author Tyll Weiß <inkdpixels@gmail.com>
  */
 
 
