--- a/Ressources/Private/Sass/generic/_widths.scss
+++ b/Ressources/Private/Sass/generic/_widths.scss
@@ -5,7 +5,7 @@
  *
  * @package #{$package_name()}
  * @path generic/_widths.scss
- * @author Tyll Weiß <t.weiss@exinit.de>
+ * @author Tyll Weiß <inkdpixels@gmail.com>
  * @license Apache License, Version 2.0.
  */
 
