--- a/Ressources/Private/Sass/main.scss
+++ b/Ressources/Private/Sass/main.scss
@@ -6,7 +6,7 @@ $package_name: t3b_frontend;
  *
  * @package #{$package_name()}
  * @path /main.scss
- * @author Tyll Weiß <t.weiss@exinit.de>
+ * @author Tyll Weiß <inkdpixels@gmail.com>
 
 
  */
