--- a/Ressources/Private/Sass/objects/_buttons.scss
+++ b/Ressources/Private/Sass/objects/_buttons.scss
@@ -4,7 +4,7 @@
  *
  * @package #{$package_name()}
  * @path objects/_buttons.scss
- * @author Tyll Weiß <t.weiss@exinit.de>
+ * @author Tyll Weiß <inkdpixels@gmail.com>
  * @license Apache License, Version 2.0.
  * @link http://csswizardry.com/2011/09/the-nav-abstraction/
  */
