--- a/Ressources/Private/Sass/_settings/_all.scss
+++ b/Ressources/Private/Sass/_settings/_all.scss
@@ -3,7 +3,7 @@
 //
 // @package #{$package_name()}
 // @path  _settings/_all.sass
-// @author Tyll Weiß <t.weiss@exinit.de>
+// @author Tyll Weiß <inkdpixels@gmail.com>
 //
 
 
