--- a/Ressources/Private/Sass/_settings/_variables.scss
+++ b/Ressources/Private/Sass/_settings/_variables.scss
@@ -3,7 +3,7 @@
 //
 // @package #{$package_name()}
 // @path settings/_variables.sass
-// @author Tyll Weiß <t.weiss@exinit.de>
+// @author Tyll Weiß <inkdpixels@gmail.com>
 // @link http://sass-lang.com/docs/yardoc/file.SASS_REFERENCE.html#variables_
 //
 
