--- a/Ressources/Private/Sass/base/_links.scss
+++ b/Ressources/Private/Sass/base/_links.scss
@@ -3,7 +3,7 @@
  *
  * @package #{$package_name()}
  * @path base/_links.scss
- * @author Tyll Weiß <t.weiss@exinit.de>
+ * @author Tyll Weiß <inkdpixels@gmail.com>
  */
 
 
