--- a/Ressources/Private/Sass/generic/_helper.scss
+++ b/Ressources/Private/Sass/generic/_helper.scss
@@ -3,7 +3,7 @@
  *
  * @package #{$package_name()}
  * @path generic/_helper.scss
- * @author Tyll Weiß <t.weiss@exinit.de>
+ * @author Tyll Weiß <inkdpixels@gmail.com>
  * @link http://html5boilerplate.com/docs/css/#non-semantic-helper-classes
  */
 
