--- a/Ressources/Private/Sass/generic/_print.scss
+++ b/Ressources/Private/Sass/generic/_print.scss
@@ -3,7 +3,7 @@
  *
  * @package #{$package_name()}
  * @path generic/_print.scss
- * @author Tyll Weiß <t.weiss@exinit.de>
+ * @author Tyll Weiß <inkdpixels@gmail.com>
  * @link http://h5bp.com/r
  */
 
