--- a/Ressources/Private/Sass/generic/_t3-general.scss
+++ b/Ressources/Private/Sass/generic/_t3-general.scss
@@ -3,7 +3,7 @@
  *
  * @package #{$package_name()}
  * @path generic/_t3-general.scss
- * @author Tyll Weiß <t.weiss@exinit.de>
+ * @author Tyll Weiß <inkdpixels@gmail.com>
  */
 
 
